test/Fail/Issue4881b.err
Issue4881b.agda:2.1-2: error: [Syntax.DuplicateAnonDeclaration]
Duplicate declaration of _. Previous definition at
Issue4881b.agda:1.1-2
